--- a/_posts/2010-04-01-buying-a-modded-car.html
+++ b/_posts/2010-04-01-buying-a-modded-car.html
@@ -8,4 +8,6 @@ categories:
 redirect_from: 
     - "/Blog/itemId/469/Buying-a-modded-car"
 ---
-<p>Don’t do it! Unless you buy it from a friend and know exactly what they did!</p>  <p>The 350z failed the smog test tonight. Time to find some OEM cats to put on the car and hope that it helps to make it pass!</p>
+<p>Don’t do it! Unless you buy it from a friend and know exactly what they did!</p>
+
+<p>The 350z failed the smog test tonight. Time to find some OEM cats to put on the car and hope that it helps to make it pass!</p>
