--- a/_posts/2010-05-31-whered-the-350z-go.html
+++ b/_posts/2010-05-31-whered-the-350z-go.html
@@ -8,4 +8,12 @@ categories:
 redirect_from: 
     - "/Blog/itemId/471/Whered-the-350z-go"
 ---
-<p>So it’s been a while since I’ve done any updates here on Project350z.com, so here’s a quick update.</p>  <p>The car has been doing well the past few months but at this point has been relegated to strictly commuter duty, and it will likely be that way for a while now. Though I do hope to hit an event or two here in the coming months, hopefully on towards the end of June and another 2 or 3 in July.</p>  <p>I’m still trying to get the car ready to pass smog, and am hoping to pick up a stock exhaust for the car tomorrow and get that installed so I can get another smog test this weekend. Before I can install it though I need to make room in the garage! Right now the garage is full of stuff from the move, as is the office. I hope to get the office setup tomorrow and at least room for the car in the garage tomorrow if I can get a hold of the exhaust.</p>  <p>I’ve also been cheating on the 350z a little bit. I put money down on a commuter replacement, by registering during the preregistration period for the Nissan Leaf, I even setup a site for it, no not projectleaf, but <a href="http://www.leafowner.com">www.leafowner.com</a>. I don’t intend to get rid of the 350z, but if I do get a Leaf the Z will see far less street usage!</p>  <p>More updates coming soon! I might even video the work tomorrow.</p>
+<p>So it’s been a while since I’ve done any updates here on Project350z.com, so here’s a quick update.</p>
+
+<p>The car has been doing well the past few months but at this point has been relegated to strictly commuter duty, and it will likely be that way for a while now. Though I do hope to hit an event or two here in the coming months, hopefully on towards the end of June and another 2 or 3 in July.</p>
+
+<p>I’m still trying to get the car ready to pass smog, and am hoping to pick up a stock exhaust for the car tomorrow and get that installed so I can get another smog test this weekend. Before I can install it though I need to make room in the garage! Right now the garage is full of stuff from the move, as is the office. I hope to get the office setup tomorrow and at least room for the car in the garage tomorrow if I can get a hold of the exhaust.</p>
+
+<p>I’ve also been cheating on the 350z a little bit. I put money down on a commuter replacement, by registering during the preregistration period for the Nissan Leaf, I even setup a site for it, no not projectleaf, but <a href="http://www.leafowner.com">www.leafowner.com</a>. I don’t intend to get rid of the 350z, but if I do get a Leaf the Z will see far less street usage!</p>
+
+<p>More updates coming soon! I might even video the work tomorrow.</p>
