--- a/_posts/2010-12-27-unable-to-get-any-customer-service-from-injen-systems.html
+++ b/_posts/2010-12-27-unable-to-get-any-customer-service-from-injen-systems.html
@@ -8,4 +8,18 @@ categories:
 redirect_from: 
     - "/Blog/itemId/483/Unable-to-get-any-customer-service-from-Injen-Sy"
 ---
-<p>So I’ve been trying for 4+ months now to get some customer service from Injen Systems for the Super SES Exhaust on my Nissan 350z that has a massive leak in it.</p>  <p>Back in August I received a response from Injen</p>  <blockquote>  <p>Hi Chris,</p>  <p>Can you send me a picture of your exhaust? I guess we had a few different ones made for that same vehicle and a photo would make it much easier to figure out what part and get you the correct part.</p>  <p><strong><b>Thank You,</b></strong></p>  <p>&#160;</p>  </blockquote>  <p>I responded with photos of the exhaust and what I needed. I have heard nothing back. I’ve emailed them multiple times, even emailing their tech and info email addresses, but so far I have not received a single response from them since that email quoted above.</p>  <p>I sure wish I could get some help, I actually liked the exhaust on my 350z, but this has to be the worst customer service ever!</p>  <p>&#160;</p>  <p><strong>UPDATE:</strong> <a href="http://www.project350z.com/Articles/itemId/488/Injen-Customer-Service-Update-It-rocks.aspx">I'm glad to say that Injen came through and got me the replacement parts I needed</a>!</p>
+<p>So I’ve been trying for 4+ months now to get some customer service from Injen Systems for the Super SES Exhaust on my Nissan 350z that has a massive leak in it.</p>
+
+<p>Back in August I received a response from Injen</p>  <blockquote>  <p>Hi Chris,</p>
+
+<p>Can you send me a picture of your exhaust? I guess we had a few different ones made for that same vehicle and a photo would make it much easier to figure out what part and get you the correct part.</p>
+
+<p><strong><b>Thank You,</b></strong></p>
+
+<p>&#160;</p>  </blockquote>  <p>I responded with photos of the exhaust and what I needed. I have heard nothing back. I’ve emailed them multiple times, even emailing their tech and info email addresses, but so far I have not received a single response from them since that email quoted above.</p>
+
+<p>I sure wish I could get some help, I actually liked the exhaust on my 350z, but this has to be the worst customer service ever!</p>
+
+<p>&#160;</p>
+
+<p><strong>UPDATE:</strong> <a href="http://www.project350z.com/Articles/itemId/488/Injen-Customer-Service-Update-It-rocks.aspx">I'm glad to say that Injen came through and got me the replacement parts I needed</a>!</p>
