--- a/_posts/2011-01-19-decking-out-the-project350z-in-dotnetnuke.html
+++ b/_posts/2011-01-19-decking-out-the-project350z-in-dotnetnuke.html
@@ -8,4 +8,20 @@ categories:
 redirect_from: 
     - "/Blog/itemId/487/Decking-out-the-Project350z-in-DotNetNuke"
 ---
-<p>I don&rsquo;t have an Autocross event coming up for a couple weeks, but I couldn&rsquo;t wait, I had to do something to the car.</p>  <p>So here she is, <a href="http://www.dotnetnuke.com">DotNetNuke</a> logos on the front and the back of the 350z.</p>  <p><img alt="" src="http://farm6.static.flickr.com/5247/5362427932_1cd99da6c9.jpg" /></p>  <p>and</p>  <p><img alt="" src="http://farm6.static.flickr.com/5210/5361818753_2fe8c12a32.jpg" /></p>  <p><strong>What is DotNetNuke?</strong> DotNetNuke is an open source platform for building web sites based on Microsoft .NET technology.</p>  <p><strong>Why would someone put a DotNetNuke logo on their car?</strong> This website runs on DotNetNuke. My personal website runs on DotNetNuke, my wife&rsquo;s site runs on DotNetNuke, my daughter&rsquo;s website runs on DotNetNuke, <a href="http://www.SCCAForums.com" target="_blank">SCCAForums.com</a> runs on DotNetNuke. I work for DotNetNuke Corporation. I&rsquo;ve used DotNetNuke for 8 years now. My life revolves around DotNetNuke, and has for a long time, and hopefully will for a long time as well.</p>  <p>So I found it fitting that I should try to help promote the product in any way I can. That includes putting the logo on my car, front and back. <a href="http://www.flickr.com/photos/chammond/2291945232/" target="_blank">I&rsquo;ve done it before, on a different car</a>, so why not on my current car!</p>  <p>So what do you think? Am I crazy? </p>
+<p>I don&rsquo;t have an Autocross event coming up for a couple weeks, but I couldn&rsquo;t wait, I had to do something to the car.</p>
+
+<p>So here she is, <a href="http://www.dotnetnuke.com">DotNetNuke</a> logos on the front and the back of the 350z.</p>
+
+<p><img alt="" src="http://farm6.static.flickr.com/5247/5362427932_1cd99da6c9.jpg" /></p>
+
+<p>and</p>
+
+<p><img alt="" src="http://farm6.static.flickr.com/5210/5361818753_2fe8c12a32.jpg" /></p>
+
+<p><strong>What is DotNetNuke?</strong> DotNetNuke is an open source platform for building web sites based on Microsoft .NET technology.</p>
+
+<p><strong>Why would someone put a DotNetNuke logo on their car?</strong> This website runs on DotNetNuke. My personal website runs on DotNetNuke, my wife&rsquo;s site runs on DotNetNuke, my daughter&rsquo;s website runs on DotNetNuke, <a href="http://www.SCCAForums.com" target="_blank">SCCAForums.com</a> runs on DotNetNuke. I work for DotNetNuke Corporation. I&rsquo;ve used DotNetNuke for 8 years now. My life revolves around DotNetNuke, and has for a long time, and hopefully will for a long time as well.</p>
+
+<p>So I found it fitting that I should try to help promote the product in any way I can. That includes putting the logo on my car, front and back. <a href="http://www.flickr.com/photos/chammond/2291945232/" target="_blank">I&rsquo;ve done it before, on a different car</a>, so why not on my current car!</p>
+
+<p>So what do you think? Am I crazy? </p>
