--- a/_posts/2011-01-26-buying-an-autocross-helmet.html
+++ b/_posts/2011-01-26-buying-an-autocross-helmet.html
@@ -8,4 +8,10 @@ categories:
 redirect_from: 
     - "/Blog/itemId/491/Buying-an-Autocross-Helmet"
 ---
-<p>If you’re looking to buy an <a href="http://www.soloperformance.com/Helmets-and-Accessories_c_13.html" target="_blank">Autocross Helmet</a> you should check out <a href="http://www.soloperformance.com/">http://www.soloperformance.com/</a></p>  <p>I’ve been a long time Solo Performance customer, and just recently purchased a number of items from them, including this stylish new <a href="http://www.soloperformance.com/Helmets-and-Accessories_c_13.html" target="_blank">autocross helmet</a>!</p>  <p><a href="http://www.flickr.com/photos/chammond/5390956023/"><img border="0" alt="Day 26 of #flickr365 #autocross #helmet" src="http://farm6.static.flickr.com/5296/5390956023_41ce9910af_m.jpg" width="179" height="240" /></a></p>  <p>It should see its first autocross action this Sunday, though it has already seen action at the foosball table here at the office.</p>
+<p>If you’re looking to buy an <a href="http://www.soloperformance.com/Helmets-and-Accessories_c_13.html" target="_blank">Autocross Helmet</a> you should check out <a href="http://www.soloperformance.com/">http://www.soloperformance.com/</a></p>
+
+<p>I’ve been a long time Solo Performance customer, and just recently purchased a number of items from them, including this stylish new <a href="http://www.soloperformance.com/Helmets-and-Accessories_c_13.html" target="_blank">autocross helmet</a>!</p>
+
+<p><a href="http://www.flickr.com/photos/chammond/5390956023/"><img border="0" alt="Day 26 of #flickr365 #autocross #helmet" src="http://farm6.static.flickr.com/5296/5390956023_41ce9910af_m.jpg" width="179" height="240" /></a></p>
+
+<p>It should see its first autocross action this Sunday, though it has already seen action at the foosball table here at the office.</p>
