--- a/_posts/2011-01-31-how-do-you-travel-with-your-video-equipment.html
+++ b/_posts/2011-01-31-how-do-you-travel-with-your-video-equipment.html
@@ -8,4 +8,14 @@ categories:
 redirect_from: 
     - "/Blog/itemId/493/How-do-you-travel-with-your-video-equipment"
 ---
-<p>So this isn’t the blog post I had intended to write today, but I think it’s a useful one nonetheless.</p>  <p>For those of you who autocross, or partake in any other motorsports. How do you travel with your video equipment? Discussion on where you mount your cameras and such, and what types of cameras will be left for another set of blog posts, but for now, how do you get your equipment to a race?</p>  <p>If you’re a small time autocrosser like me, you likely aren’t towing your car around on an enclosed trailer with lots of storage space.</p>  <p>At this point I have 3-6 potential video cameras I could take/use at any one race. Two GoPro’s (one HD and one of the SUPER CRAPPY original versions), a Chase Cam/PDR, plus a Canon HV10, 5d Mark II and a point and shoot that will do video. Now granted, I will almost likely never put the 5d Mark II on the car, I do take it to events so that I can take photos.</p>  <p>So what’s the best way to get things to an event? Right now I’m packing things into a lowepro 300aw, and that is probably the best solution for the time being, but with all that equipment I’m going to have to trim back what I put in the bag (less lenses for the 5D).</p>  <p>What do you use? A Pelican case? A bag? Something else? </p>
+<p>So this isn’t the blog post I had intended to write today, but I think it’s a useful one nonetheless.</p>
+
+<p>For those of you who autocross, or partake in any other motorsports. How do you travel with your video equipment? Discussion on where you mount your cameras and such, and what types of cameras will be left for another set of blog posts, but for now, how do you get your equipment to a race?</p>
+
+<p>If you’re a small time autocrosser like me, you likely aren’t towing your car around on an enclosed trailer with lots of storage space.</p>
+
+<p>At this point I have 3-6 potential video cameras I could take/use at any one race. Two GoPro’s (one HD and one of the SUPER CRAPPY original versions), a Chase Cam/PDR, plus a Canon HV10, 5d Mark II and a point and shoot that will do video. Now granted, I will almost likely never put the 5d Mark II on the car, I do take it to events so that I can take photos.</p>
+
+<p>So what’s the best way to get things to an event? Right now I’m packing things into a lowepro 300aw, and that is probably the best solution for the time being, but with all that equipment I’m going to have to trim back what I put in the bag (less lenses for the 5D).</p>
+
+<p>What do you use? A Pelican case? A bag? Something else? </p>
