--- a/_posts/2011-03-18-suspension-plans-sort-of.html
+++ b/_posts/2011-03-18-suspension-plans-sort-of.html
@@ -8,4 +8,10 @@ categories:
 redirect_from: 
     - "/Blog/itemId/510/Suspension-plans-sort-of"
 ---
-<p>So I wasn’t able to find a part that would make the SPL Upper Control Arms legal for BSP yet, though I am still looking.</p>  <p>As an interim, possibly long term, solution, I have some new offset bushings that should be here soon. John Coffey at <a href="http://www.betamotorsports.com">www.betamotorsports.com</a> made two sets of Hydlar Z offset bushings. One set for his car, and then one set to sell. Apparently he sold them once, but the buyer sent them back as he wasn’t up for the fabrication involved in installing them. I on the other hand am game (at least I hope).</p>  <p>I’ll be installing everything this Saturday, it’ll be a long day, but hopefully I can get everything installed. I unfortunately won’t be able to do an alignment on the car, at least not likely, but if I can get done I may try to run somewhere and have it done. Hopefully things turn out!</p>  <p>Expect lots of photos and video this weekend!</p>
+<p>So I wasn’t able to find a part that would make the SPL Upper Control Arms legal for BSP yet, though I am still looking.</p>
+
+<p>As an interim, possibly long term, solution, I have some new offset bushings that should be here soon. John Coffey at <a href="http://www.betamotorsports.com">www.betamotorsports.com</a> made two sets of Hydlar Z offset bushings. One set for his car, and then one set to sell. Apparently he sold them once, but the buyer sent them back as he wasn’t up for the fabrication involved in installing them. I on the other hand am game (at least I hope).</p>
+
+<p>I’ll be installing everything this Saturday, it’ll be a long day, but hopefully I can get everything installed. I unfortunately won’t be able to do an alignment on the car, at least not likely, but if I can get done I may try to run somewhere and have it done. Hopefully things turn out!</p>
+
+<p>Expect lots of photos and video this weekend!</p>
