--- a/_posts/2011-03-19-suspension-progress-none.html
+++ b/_posts/2011-03-19-suspension-progress-none.html
@@ -8,4 +8,8 @@ categories:
 redirect_from: 
     - "/Blog/itemId/512/Suspension-progress-none"
 ---
-<p>So I didn’t make any progress today, well not much at least. I spent the morning watching the baby while the wife got to get some much needed pampering time. After that I spent time working on a work related project.</p>  <p>I also, with the help of my buddy Dave, figured out the additional items I needed to get so I can use the custom bushings that I blogged about yesterday.</p>  <p>So, Sunday is suspension day. Hopefully I can get it all done!</p>
+<p>So I didn’t make any progress today, well not much at least. I spent the morning watching the baby while the wife got to get some much needed pampering time. After that I spent time working on a work related project.</p>
+
+<p>I also, with the help of my buddy Dave, figured out the additional items I needed to get so I can use the custom bushings that I blogged about yesterday.</p>
+
+<p>So, Sunday is suspension day. Hopefully I can get it all done!</p>
