--- a/_posts/2011-07-15-watching-the-car-show.html
+++ b/_posts/2011-07-15-watching-the-car-show.html
@@ -8,4 +8,10 @@ categories:
 redirect_from: 
     - "/Blog/itemId/543/Watching-The-Car-Show"
 ---
-<p>So I got home from work this evening, spent some time with the baby this evening, and now I am watching The Car Show (@<a href="http://twitter.com/carshow" target="_blank">carshow</a>), a new series on Speed, though I am watching it on Hulu.</p>  <p>If you’re a car guy, you should check it out.</p>  <p>To be honest though, I’m not sure it is any better, or even as good, as Top Gear USA. Which is ironic, because Adam Carolla was originally on the pilot for Top Gear USA if I recall correctly.</p>  <p>What do you think of the show?</p>
+<p>So I got home from work this evening, spent some time with the baby this evening, and now I am watching The Car Show (@<a href="http://twitter.com/carshow" target="_blank">carshow</a>), a new series on Speed, though I am watching it on Hulu.</p>
+
+<p>If you’re a car guy, you should check it out.</p>
+
+<p>To be honest though, I’m not sure it is any better, or even as good, as Top Gear USA. Which is ironic, because Adam Carolla was originally on the pilot for Top Gear USA if I recall correctly.</p>
+
+<p>What do you think of the show?</p>
