--- a/_posts/2010-07-18-nismo-cold-air-intake-for-a-350z.html
+++ b/_posts/2010-07-18-nismo-cold-air-intake-for-a-350z.html
@@ -8,4 +8,6 @@ categories:
 redirect_from: 
     - "/Blog/itemId/472/Nismo-Cold-Air-Intake-for-a-350z"
 ---
-<p>So when the Project350z was purchased in Colorado back in January it had a Nismo Cold Air Intake on it. Shortly thereafter I moved to California, and guess what? The Nismo isn’t CARB legal, which means it isn’t legal for use in the State of California, so off the intake came.</p>  <p>And there it sat. and sat. and sat some more. Until today, I finally decided to pull it out of the box and put it up on <a href="http://cgi.ebay.com/ebaymotors/ws/eBayISAPI.dll?ViewItem&amp;item=150469355328&amp;ssPageName=ADME:L:LCA:MOTORS:1123" target="_blank">Ebay. So there it is, sitting on Ebay, have at it</a>!</p>
+<p>So when the Project350z was purchased in Colorado back in January it had a Nismo Cold Air Intake on it. Shortly thereafter I moved to California, and guess what? The Nismo isn’t CARB legal, which means it isn’t legal for use in the State of California, so off the intake came.</p>
+
+<p>And there it sat. and sat. and sat some more. Until today, I finally decided to pull it out of the box and put it up on <a href="http://cgi.ebay.com/ebaymotors/ws/eBayISAPI.dll?ViewItem&amp;item=150469355328&amp;ssPageName=ADME:L:LCA:MOTORS:1123" target="_blank">Ebay. So there it is, sitting on Ebay, have at it</a>!</p>
