--- a/_posts/2011-02-21-350z-autocross-tire-pressures.html
+++ b/_posts/2011-02-21-350z-autocross-tire-pressures.html
@@ -8,4 +8,6 @@ categories:
 redirect_from: 
     - "/Blog/itemId/505/350z-Autocross-Tire-Pressures"
 ---
-<p>So with all the blogging I&rsquo;ve done over the years I have been unable to find any posts where I mentioned tire pressures!</p>  <p>So here it is, a thread that I will continually update with tire pressure information for my 350z. As I change configurations I will move settings to an archive down below.</p>  <h2>Current Tires</h2>  <p>Kumho V710 305/30R18   <br />  (as of 2/20/2011)</p>  <h2>Current Pressures</h2>  <p>Front: 25psi   <br />  Rear: 23psi    <br />  (as of 2/20/2011, 3/6/2011)</p>
+<p>So with all the blogging I&rsquo;ve done over the years I have been unable to find any posts where I mentioned tire pressures!</p>
+
+<p>So here it is, a thread that I will continually update with tire pressure information for my 350z. As I change configurations I will move settings to an archive down below.</p>  <h2>Current Tires</h2>  <p>Kumho V710 305/30R18   <br />  (as of 2/20/2011)</p>  <h2>Current Pressures</h2>  <p>Front: 25psi   <br />  Rear: 23psi    <br />  (as of 2/20/2011, 3/6/2011)</p>
