--- a/_posts/2011-04-09-listen-to-the-el-toro-prosolo-live.html
+++ b/_posts/2011-04-09-listen-to-the-el-toro-prosolo-live.html
@@ -8,4 +8,12 @@ categories:
 redirect_from: 
     - "/Blog/itemId/525/Listen-to-the-El-Toro-ProSolo-Live"
 ---
-<p>So today I did some testing with UStream and the FM Audio Broadcast at the El Toro ProSolo. I think I managed to come up with a way to broadcast the announce stream out on the internet (audio only) using UStream.</p>  <p>I setup a new “Channel” for the ProSolo on Ustream, we’ll see how it works out tomorrow, but if you want, give it a listen by going to (only active during competition, and if it works)</p>  <p><a href="http://www.ustream.tv/channel/prosolo">http://www.ustream.tv/channel/prosolo</a></p>  <p>This is completely unofficial, and if it goes down it goes down, no promises that it will work! </p>  <p>Between the live audio and <a href="http://sololive.scca.com">http://sololive.scca.com</a> you might be able to feel like you are actually in El Toro being miles away! The event is supposed to start at 9am, we’ll see how things work out.</p>
+<p>So today I did some testing with UStream and the FM Audio Broadcast at the El Toro ProSolo. I think I managed to come up with a way to broadcast the announce stream out on the internet (audio only) using UStream.</p>
+
+<p>I setup a new “Channel” for the ProSolo on Ustream, we’ll see how it works out tomorrow, but if you want, give it a listen by going to (only active during competition, and if it works)</p>
+
+<p><a href="http://www.ustream.tv/channel/prosolo">http://www.ustream.tv/channel/prosolo</a></p>
+
+<p>This is completely unofficial, and if it goes down it goes down, no promises that it will work! </p>
+
+<p>Between the live audio and <a href="http://sololive.scca.com">http://sololive.scca.com</a> you might be able to feel like you are actually in El Toro being miles away! The event is supposed to start at 9am, we’ll see how things work out.</p>
