--- a/_posts/2011-07-04-back-in-the-saddle-again.html
+++ b/_posts/2011-07-04-back-in-the-saddle-again.html
@@ -22,6 +22,7 @@ redirect_from:
 
 <p>I didn’t stick around the site after my runs, changed tires and headed out so that I could get home. I think I found the downfall of living in Half Moon Bay. It took me just under 2 hours to get to Marina this morning, and over 3 hours to get home due to all the holiday/beach traffic!</p>
 
-<p><a title="AAS Autocross July 3rd, 2011" href="http://www.flickr.com/photos/17726343@N00/5899704327/"><img border="0" alt="AAS Autocross July 3rd, 2011" align="right" src="http://static.flickr.com/5317/5899704327_7017d320d0_m.jpg" /></a>Here’s a photo I took of the car today I didn’t take many photos, but <a href="http://www.flickr.com/photos/chammond/sets/72157627111621056/with/5899705291/" target="_blank">you can see the few that I did here</a>.</p>    <p>I’ll have videos up later this week</p>
+<p><a title="AAS Autocross July 3rd, 2011" href="http://www.flickr.com/photos/17726343@N00/5899704327/"><img border="0" alt="AAS Autocross July 3rd, 2011" align="right" src="http://static.flickr.com/5317/5899704327_7017d320d0_m.jpg" /></a>Here’s a photo I took of the car today I didn’t take many photos, but <a href="http://www.flickr.com/photos/chammond/sets/72157627111621056/with/5899705291/" target="_blank">you can see the few that I did here</a>.</p>
+<p>I’ll have videos up later this week</p>
 
 <p>Settings:   <br />Tire psi: 25/23 f/r    <br />Shocks: Front 7 clicks compression 1 full turn rebound    <br />Rear 3 clicks rebound</p>
