--- a/_posts/2016-03-07-weekend-progress-on-the-350z.html
+++ b/_posts/2016-03-07-weekend-progress-on-the-350z.html
@@ -10,7 +10,16 @@ redirect_from:
 ---
 <iframe src="https://www.youtube.com/embed/W_L9OQWg1vE" frameborder="0" width="100%"></iframe>  <p>It was a good weekend on the 350z, I made progress on pretty much everything I needed/wanted to do to start the 2016 season, with only the corner balance and wheel alignment remaining. Those are scheduled for Monday at <a href="http://SoloPerformance.com" target="_blank">Solo Performance</a><sub></sub>.</p>
 
-<p>Here&rsquo;s a run down of what I was able to accomplish this weekend:</p>  <ul>      <li>Oil/Filter Change  </li>      <li>Plenum Spacer Removel  </li>      <li>Upper and Lower intake manifold cleaning  </li>      <li>Lower engine splash guard installed  </li>      <li>Passenger front fender liner replaced  </li>      <li>Replaced bolts for strut tower brace  </li>      <li>PlastiDip&rsquo;d strut tower brace  </li>      <li>Replaced missing plastic clips all around the front end, top and bottom</li>  </ul>  <p>When I removed the upper intake, to remove the Plenum spacer I found that the inside was a disgusting mess. I sprayed it with some carb cleaner before seeing &ldquo;not recommended on fuel injected vehicles&rdquo; on the can, so I headed off to pick up some throttle body/intake cleaner. Ideally I would have taken the entire lower manifold off and cleaned it, but I didn&rsquo;t have the lower gasket and after spending all day on the car I was anxious to finish up for the evening. I cleaned it up, but it still could be better (See photos below). After getting it all back together, I wasn&rsquo;t able to start the car, initially it started and ran for a moment, but after that it wouldn&rsquo;t fire.</p>
+<p>Here&rsquo;s a run down of what I was able to accomplish this weekend:</ul>
+<p>      <li>Oil/Filter Change  </li>
+<li>Plenum Spacer Removel  </li>
+<li>Upper and Lower intake manifold cleaning  </li>
+<li>Lower engine splash guard installed  </li>
+<li>Passenger front fender liner replaced  </li>
+<li>Replaced bolts for strut tower brace  </li>
+<li>PlastiDip&rsquo;d strut tower brace  </li>
+<li>Replaced missing plastic clips all around the front end, top and bottom</li>  </ul>
+<p>When I removed the upper intake, to remove the Plenum spacer I found that the inside was a disgusting mess. I sprayed it with some carb cleaner before seeing &ldquo;not recommended on fuel injected vehicles&rdquo; on the can, so I headed off to pick up some throttle body/intake cleaner. Ideally I would have taken the entire lower manifold off and cleaned it, but I didn&rsquo;t have the lower gasket and after spending all day on the car I was anxious to finish up for the evening. I cleaned it up, but it still could be better (See photos below). After getting it all back together, I wasn&rsquo;t able to start the car, initially it started and ran for a moment, but after that it wouldn&rsquo;t fire.</p>
 
 <p>I went to bed dejected, worried I had done something to damage the car. While laying in bed I started to question if I had reconnected the throttle body, so first thing in the morning when I awoke I went out to the garage to check, and sure enough, I hadn&rsquo;t fully connected the throttle body. I connected that up, and later in the morning after grabbing the keys I was able to start the car up without any problems.</p>
 
