--- a/_posts/2016-04-23-the-2016-autocross-season-so-far.html
+++ b/_posts/2016-04-23-the-2016-autocross-season-so-far.html
@@ -9,8 +9,15 @@ redirect_from:
     - "/Blog/itemId/569/The-2016-Autocross-Season-So-Far"
 ---
 <iframe src="https://www.youtube.com/embed/gH1Iwcm0suc" frameborder="0" width="100%" allowfullscreen></iframe>
-<p>So it has been a while since I’ve had the time to get a blog post up here, so let’s get started.</p>
-<p>After the last post, the car was almost ready for the Dixie National tour, held in Cecil Georgia, but there was some final prep to do. I took the car down to Solo Performance to corner weight and align the thing, with good results.</p>
+
+<p>
+    So it has been a while since I’ve had the time to get a blog post up here, so let’s get started.
+</p>
+
+<p>
+    After the last post, the car was almost ready for the Dixie National tour, held in Cecil Georgia, but there was some final prep to do. I took the car down to Solo Performance to corner weight and align the thing, with good results.
+</p>
+
 <p>
     <a title="#350z #autocross #balance #weight # alignment" href="https://www.flickr.com/photos/chammond/24969652024/in/dateposted-public/" data-flickr-embed="true">
         <img style="float: none; margin-left: auto; display: block; margin-right: auto" alt="#350z #autocross #balance #weight # alignment" src="https://farm2.staticflickr.com/1621/24969652024_924a29b86a.jpg" width="500" height="500">
@@ -153,10 +160,15 @@ redirect_from:
     hard time “improving” on autocross runs typically, meaning I’ll go out and put down a pretty quick time, but not improve much over the next 2 runs (more if local events), which means I am oftentimes not getting all that I should be out of the car,
     or myself. I am going to try to improve my driving through the use of technology, and the hot tool right now for that in Autocross is an Android app called <a href="http://www.petreldata.com/product/solostorm-gps-obd-ii-and-video-logger-for-android-v2-2/"
     target="_blank">SoloStorm</a>, from <a href="http://www.petreldata.com/" target="_blank">petreldata.com</a>.</p>
-<p>With SoloStorm you can analyze the data from your runs quickly from an Android tablet inside of your car. In the past I’ve tried to look at data from the DL-1, on a laptop, between runs, but it was clunky and not easy enough to do that quickly. With SoloStorm
-    you are able to look at runs, segments, and compare where you are faster or slower, this can be extremely useful when you have two drivers as you can compare your run to the other driver to see where you can each improve.</p>
-<p>I haven’t used it just yet, I did try to get it working with my old-ass RaceTechnology DL-1, but wasn’t able to get the Tablet (Nexus 7 2013) and the DL-1 talking properly while on the parking lot at the Family Arena. I’m hoping to have the Bluetooth
-    GPS&nbsp; hardware before my next event (<a href="http://www.gatewayautox.com">www.gatewayautox.com</a>) so look for more posts on SoloStorm in the coming weeks and months.</p>
+<p>
+    With SoloStorm you can analyze the data from your runs quickly from an Android tablet inside of your car. In the past I’ve tried to look at data from the DL-1, on a laptop, between runs, but it was clunky and not easy enough to do that quickly. With SoloStorm you are able to look at runs, segments, and compare where you are faster or slower, this can be extremely useful when you have two drivers as you can compare your run to the other driver to see where you can each improve.
+</p>
+<p>
+    I haven’t used it just yet, I did try to get it working with my old-ass RaceTechnology DL-1, but wasn’t able to get the Tablet (Nexus 7 2013) and the DL-1 talking properly while on the parking lot at the Family Arena. I’m hoping to have the Bluetooth
+    GPS&nbsp; hardware before my next event (<a href="http://www.gatewayautox.com">www.gatewayautox.com</a>) so look for more posts on SoloStorm in the coming weeks and months.
+</p>
 
 <h3>What’s Next?</h3>
+
 <p>Next weekend (April 30, May 1st) I’ll be at the Grissom Classic in Peru Indiana, and the following weekend I’ll be at the Wilmington ProSolo. See you out at an event!</p>
+
