--- a/_posts/2011-02-13-san-francisco-region-scca-boondoggle-2011-results.html
+++ b/_posts/2011-02-13-san-francisco-region-scca-boondoggle-2011-results.html
@@ -8,7 +8,8 @@ categories:
 redirect_from: 
     - "/Blog/itemId/501/San-Francisco-Region-SCCA-Boondoggle-2011-Result"
 ---
-<p>So today was the first day for a few things</p>  <ol>      <li>It was my first time running an autocross with the San Francisco Region of the SCCA. I must say things went fairly well, even with of the normal first event hiccups. </li>      <li>It was my first time running this 350z on RComps, and any 350z on 18&rdquo; tires on 10&rdquo; wide wheels. Overall I was impressed, though I long for 315 Hoosier A6s!</li>  </ol>  <p>Today&rsquo;s event was held at California&rsquo;s Great America in Santa Clara, CA. I started out slow, but finally kicked it in gear a bit on my 4th and final run. I realized today that I used to drive balls to the wall all the time at an autocross, I guess in my old age I&rsquo;m not doing that as much, so it took me a while to turn that switch back on.</p>
+<p>So today was the first day for a few things</p>  <ol>      <li>It was my first time running an autocross with the San Francisco Region of the SCCA. I must say things went fairly well, even with of the normal first event hiccups. </li>
+<li>It was my first time running this 350z on RComps, and any 350z on 18&rdquo; tires on 10&rdquo; wide wheels. Overall I was impressed, though I long for 315 Hoosier A6s!</li>  </ol>  <p>Today&rsquo;s event was held at California&rsquo;s Great America in Santa Clara, CA. I started out slow, but finally kicked it in gear a bit on my 4th and final run. I realized today that I used to drive balls to the wall all the time at an autocross, I guess in my old age I&rsquo;m not doing that as much, so it took me a while to turn that switch back on.</p>
 
 <p>Here&rsquo;s video of my first run, 42.7** seconds, 2 cones. Check out some of that inside tire spin, a definite sign that I need to get a new LSD.</p>
 
