--- a/_posts/2020-04-30-looking-for-another-350z.html
+++ b/_posts/2020-04-30-looking-for-another-350z.html
@@ -8,4 +8,7 @@ categories:
 redirect_from: 
     - "/Blog/itemId/578/Looking-for-another-350z"
 ---
-<p>The time has come to revive the Project 350z. We are currently in the market for another car, (or V1 of Project350z if @Dozzle will sell it back).</p>    <p>Looking for a lower mileage car, manual transmission, preferably an Enthusiast model, but wouldn&#39;t be opposed to a Base this time around.</p>    <p>The more local to St. Louis the better.</p>    <p>&nbsp;</p>  
+<p>The time has come to revive the Project 350z. We are currently in the market for another car, (or V1 of Project350z if @Dozzle will sell it back).</p>
+<p>Looking for a lower mileage car, manual transmission, preferably an Enthusiast model, but wouldn&#39;t be opposed to a Base this time around.</p>
+<p>The more local to St. Louis the better.</p>
+<p>&nbsp;</p>  
