Updates to HTML

--- a/_posts/2009-11-28-2011-autocross-schedule.html
+++ b/_posts/2009-11-28-2011-autocross-schedule.html
@@ -10,8 +10,8 @@ redirect_from:
 ---
 <p><strong>Tentative Schedule</strong></p>
 
-<p>This post will be updated over time to include the autocross schedule for the Project350z. While I doubt the car will make it to all these events, you gotta have a goal to start with right?</ul>
-<p>      <li><a href="http://www.rmsolo.org">1/23/2010 Winter Series Event 4, Colorado</a></li>
+<p>This post will be updated over time to include the autocross schedule for the Project350z. While I doubt the car will make it to all these events, you gotta have a goal to start with right?</p>
+<ul> <li><a href="http://www.rmsolo.org">1/23/2010 Winter Series Event 4, Colorado</a></li>
 <li><a href="http://www.norcalufo.org/main/index.php?option=com_content&amp;view=category&amp;id=34&amp;Itemid=54">9/26/2010 NorCal UFO, California</a></li>
 <li>1/30/2011 Norcal UFO, California<a style="text-decoration: underline; color: #003366;" href="http://www.rmsolo.org"></a></li>
 <li>2/13/2011 SFR SCCA, California</li>
